Fix spacing between nested lists and following paragraphs
Changed margin-bottom from 0 to $spacing-unit * .5 for nested ul/ol elements to maintain consistent vertical rhythm with paragraphs.

--- a/_sass/lord-stanley/_base.scss
+++ b/_sass/lord-stanley/_base.scss
@@ -48,7 +48,7 @@ ul, ol {
 li {
     > ul,
     > ol {
-	margin-bottom: 0;
+	margin-bottom: $spacing-unit * .5;
     }
 }
 
